Removed action attribute in form + fixed filters display on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -582,13 +582,15 @@ Anticipation d'éventuels besoins futurs pour mettre en relief certaines cartes 
     }
     
     .bar-filters {
-        gap: 10px;
+        gap: 6px;
     }
 
     .filters button {
         margin-top: 10px;
         justify-content: start;
-        width: 162.5px; /* Pour que tous les filtres aient la même largeur au lieu de s'adapter au contenu, plus esthétique lorsque certains vont automatiquement à la ligne */
+        width: 137px; /* Pour que tous les filtres aient la même largeur au lieu de s'adapter au contenu, plus esthétique lorsque certains vont automatiquement à la ligne */
+        padding: 4px 10px;
+        gap: 5px;
     }
 
     .button-filter {
